// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`treeMapGenerator create Treemap nodes only root node 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "incomingEdgePoint": Vector3 {
      "x": 48,
      "y": 500,
      "z": -101,
    },
    "isLeaf": true,
    "length": 596,
    "link": undefined,
    "markingColor": null,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": 48,
      "y": 500,
      "z": 197,
    },
    "path": "/root",
    "visible": true,
    "width": 596,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes root node with two direct children 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "incomingEdgePoint": Vector3 {
      "x": 83.13843876330611,
      "y": 2,
      "z": -83.43078061834694,
    },
    "isLeaf": false,
    "length": 666.2768775266122,
    "link": undefined,
    "markingColor": null,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": 83.13843876330611,
      "y": 2,
      "z": 249.70765814495917,
    },
    "path": "/root",
    "visible": true,
    "width": 666.2768775266122,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {
      "functions": 10,
      "mcc": 1,
      "rloc": 100,
    },
    "color": "#DDDDDD",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "incomingEdgePoint": Vector3 {
      "x": 83.13843876330606,
      "y": 4,
      "z": -73.83078061834698,
    },
    "isLeaf": true,
    "length": 627.8768775266121,
    "link": "http://www.google.de",
    "markingColor": null,
    "name": "big leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 83.13843876330606,
      "y": 4,
      "z": 240.1076581449591,
    },
    "path": "/root/big leaf",
    "visible": true,
    "width": 627.8768775266121,
    "x0": 19.200000000000003,
    "y0": 19.200000000000003,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "incomingEdgePoint": Vector3 {
      "x": 406.6768775266122,
      "y": 502,
      "z": -73.83078061834698,
    },
    "isLeaf": true,
    "length": 627.8768775266121,
    "link": undefined,
    "markingColor": null,
    "name": "Parent Leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 406.6768775266122,
      "y": 502,
      "z": 240.1076581449591,
    },
    "path": "/root/Parent Leaf",
    "visible": true,
    "width": 0,
    "x0": 656.6768775266122,
    "y0": 19.200000000000003,
    "z0": 2,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes root node with two direct children and some grand children 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "incomingEdgePoint": Vector3 {
      "x": 117.57550765359252,
      "y": 2,
      "z": -66.21224617320374,
    },
    "isLeaf": false,
    "length": 735.151015307185,
    "link": undefined,
    "markingColor": null,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": 117.57550765359252,
      "y": 2,
      "z": 301.3632614803888,
    },
    "path": "/root",
    "visible": true,
    "width": 735.151015307185,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {
      "functions": 10,
      "mcc": 1,
      "rloc": 100,
    },
    "color": "#DDDDDD",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "incomingEdgePoint": Vector3 {
      "x": -56.61224617320377,
      "y": 4,
      "z": -61.412246173203755,
    },
    "isLeaf": true,
    "length": 338.7755076535925,
    "link": "http://www.google.de",
    "markingColor": null,
    "name": "big leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 291.76326148038873,
      "y": 4,
      "z": -61.412246173203755,
    },
    "path": "/root/big leaf",
    "visible": true,
    "width": 696.751015307185,
    "x0": 19.200000000000003,
    "y0": 19.200000000000003,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "incomingEdgePoint": Vector3 {
      "x": -56.61224617320377,
      "y": 4,
      "z": 296.56326148038875,
    },
    "isLeaf": false,
    "length": 338.77550765359246,
    "link": undefined,
    "markingColor": null,
    "name": "Parent Leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 291.76326148038873,
      "y": 4,
      "z": 296.56326148038875,
    },
    "path": "/root/Parent Leaf",
    "visible": true,
    "width": 696.751015307185,
    "x0": 19.200000000000003,
    "y0": 377.17550765359255,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "functions": 100,
      "mcc": 100,
      "rloc": 30,
    },
    "color": "#820E0E",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "incomingEdgePoint": Vector3 {
      "x": -119.56734770392222,
      "y": 6,
      "z": 221.4693845669907,
    },
    "isLeaf": true,
    "length": 300.37550765359236,
    "link": undefined,
    "markingColor": null,
    "name": "small leaf",
    "outgoingEdgePoint": Vector3 {
      "x": -119.56734770392222,
      "y": 6,
      "z": 371.65713839378685,
    },
    "path": "/root/Parent Leaf/small leaf",
    "visible": true,
    "width": 184.06530459215554,
    "x0": 38.400000000000006,
    "y0": 396.3755076535926,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "functions": 1000,
      "mcc": 10,
      "rloc": 70,
    },
    "color": "#DDDDDD",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "incomingEdgePoint": Vector3 {
      "x": 105.4367322709129,
      "y": 6,
      "z": 296.56326148038875,
    },
    "isLeaf": true,
    "length": 300.37550765359236,
    "link": undefined,
    "markingColor": null,
    "name": "other small leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 332.97958762842757,
      "y": 6,
      "z": 296.56326148038875,
    },
    "path": "/root/Parent Leaf/other small leaf",
    "visible": true,
    "width": 455.08571071502945,
    "x0": 241.66530459215554,
    "y0": 396.3755076535926,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "incomingEdgePoint": Vector3 {
      "x": 456.351015307185,
      "y": 504,
      "z": 221.4693845669907,
    },
    "isLeaf": true,
    "length": 300.37550765359236,
    "link": undefined,
    "markingColor": null,
    "name": "empty folder",
    "outgoingEdgePoint": Vector3 {
      "x": 456.351015307185,
      "y": 504,
      "z": 371.65713839378685,
    },
    "path": "/root/Parent Leaf/empty folder",
    "visible": true,
    "width": 0,
    "x0": 706.351015307185,
    "y0": 396.3755076535926,
    "z0": 4,
  },
]
`;
